# Laytrace

./: Cargo.toml  LICENSE  README.md  todo.md
bin_scratch/: ModelConfig.toml
bin_scratch/models/: robot.tri
bin_scratch/src/: main.rs
docs/: buffers.md
src/: config.rs  error.rs  event_loop.rs  latr_core.rs  lib.rs
src/core/: error.rs  event_loop.rs  latr_core.rs  mod.rs
src/engine/: blas.rs  bvh.rs  bvh_core.rs  bvh_io.rs  collision.rs  engine_conf.rs  engine_core.rs  mesh_file_parsers.rs  mod.rs  model.rs  params.rs  physics.rs  simulation_params.rs
src/gpu/: bindgroups.rs  buffers.rs  gpu_core.rs  init_utils.rs  mod.rs  pipelines.rs  shaders.rs
src/gpu_utils/: bind_groups.rs  gpu_core.rs  gpu_error.rs  init_utils.rs  mod.rs  pipelines.rs  shaders.rs
src/private_tests/: bvh_tests.rs  mod.rs
src/shaders/: blit.wgsl  collision.wgsl  header.wgsl  intersect.wgsl  main.wgsl  raytrace.wgsl
tco-trace/: Cargo.toml
