[package]
name = "latr"
version = "0.1.0-alpha.1"
edition = "2024"

# Publishing Info
description = "A Rust library to simplify wgpu boilerplate and wgsl complexity for ray tracing projects."
license = "MIT"
repository = "https://github.com/btasc/Laytrace"

# Meta / Github
homepage = "https://github.com/btasc/Laytrace" # Repo link
readme = "README.md" # Explanation
keywords = ["wgpu", "raytracing", "graphics", "wgsl", "compute"] # Keywords for discovery on crates.io
categories = ["graphics", "rendering"] # Categories for crates

[dependencies]
# Core
wgpu = "27.0.1"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }

# Extra
thiserror = "2.0.17"
pollster = "0.4.0"

# Model and config file parsing dependencies
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"

# Math
rayon = "1.11.0"
glam = { version = "0.30.9", features = ["bytemuck"] }